# GlintVerySimpleExampleProgram

./: CMakeLists.txt  README.org
src/: main.g
